Modify $inner to table.

--- a/webroot/test/uitest.html
+++ b/webroot/test/uitest.html
@@ -20,7 +20,7 @@
 			</table>
 		</div>
 		<div id="jsi-live-test-inner-general" class="jsc-live-test-inner jsc-current">
-			<table>
+			<table class="jsc-lt-inner-table">
 <tr>
 					<th class="jsc-lt-true">●</th>
 					<td>
