Make add tab function.

--- a/webroot/test/uitest.html
+++ b/webroot/test/uitest.html
@@ -9,9 +9,9 @@
 
 <body>
 	<div id="jsi-live-test">
-		<div id="jsi-live-test-tab">
+		<div id="jsi-lt-tab">
 			<table>
-				<tr>
+				<tr id="jsi-lt-tab-inner">
 					<td><a class="jsc-current" href="javascript: void(0);">General</a></td>
 					<td><a href="javascript: void(0);">Sample</a></td>
 					<td><a href="javascript: void(0);">Sample</a></td>
