--- a/webroot/test/uitest.html
+++ b/webroot/test/uitest.html
@@ -19,16 +19,16 @@
 				</tr>
 			</table>
 		</div>
-		<div id="jsi-live-test-inner-general" class="jsc-live-test-inner jsc-current">
+		<div id="jsi-lt-inner-general" class="jsc-lt-inner jsc-current">
 			<table class="jsc-lt-inner-table">
 <tr>
 					<th class="jsc-lt-true">●</th>
 					<td>
-						<div class="jsc-live-test-section">
-							<div class="jsc-live-test-title">
+						<div class="jsc-lt-section">
+							<div class="jsc-lt-title">
 								window: width
 							</div>
-							<div class="jsc-live-test-value">
+							<div class="jsc-lt-value">
 								683 px
 							</div>
 						</div>
@@ -37,11 +37,11 @@
 				<tr>
 					<th class="jsc-lt-true">●</th>
 					<td>
-						<div class="jsc-live-test-section">
-							<div class="jsc-live-test-title">
+						<div class="jsc-lt-section">
+							<div class="jsc-lt-title">
 								window: width
 							</div>
-							<div class="jsc-live-test-value">
+							<div class="jsc-lt-value">
 								683 px
 							</div>
 						</div>
@@ -50,11 +50,11 @@
 				<tr>
 					<th class="jsc-lt-false">●</th>
 					<td>
-						<div class="jsc-live-test-section">
-							<div class="jsc-live-test-title">
+						<div class="jsc-lt-section">
+							<div class="jsc-lt-title">
 								window: height
 							</div>
-							<div class="jsc-live-test-value">
+							<div class="jsc-lt-value">
 								315 px
 							</div>
 						</div>
@@ -63,11 +63,11 @@
 				<tr>
 					<th>●</th>
 					<td>
-						<div class="jsc-live-test-section">
-							<div class="jsc-live-test-title">
+						<div class="jsc-lt-section">
+							<div class="jsc-lt-title">
 								window: scrollTop
 							</div>
-							<div class="jsc-live-test-value">
+							<div class="jsc-lt-value">
 								0 px
 							</div>
 						</div>
@@ -76,11 +76,11 @@
 				<tr>
 					<th>●</th>
 					<td>
-						<div class="jsc-live-test-section">
-							<div class="jsc-live-test-title">
+						<div class="jsc-lt-section">
+							<div class="jsc-lt-title">
 								window: scrollLeft
 							</div>
-							<div class="jsc-live-test-value">
+							<div class="jsc-lt-value">
 								0 px
 							</div>
 						</div>
@@ -89,11 +89,11 @@
 				<tr>
 					<th>●</th>
 					<td>
-						<div class="jsc-live-test-section">
-							<div class="jsc-live-test-title">
+						<div class="jsc-lt-section">
+							<div class="jsc-lt-title">
 								user agent:
 							</div>
-							<div class="jsc-live-test-value">
+							<div class="jsc-lt-value">
 								Mozilla/5.0 (Macintosh; Intel Mac OS X 10_8_2) AppleWebKit/537.31 (KHTML, like Gecko) Chrome/26.0.1410.65 Safari/537.31
 							</div>
 						</div>
@@ -102,20 +102,20 @@
 				<tr>
 					<th>●</th>
 					<td>
-						<div class="jsc-live-test-section">
-							<div class="jsc-live-test-title">
+						<div class="jsc-lt-section">
+							<div class="jsc-lt-title">
 								hoge
 							</div>
-							<div class="jsc-live-test-value">
+							<div class="jsc-lt-value">
 								hogehoge 
-								<span class="jsc-live-test-value-true">
+								<span class="jsc-lt-value-true">
 									true
 								</span>
 								hoge 
-								<span class="jsc-live-test-value-false">
+								<span class="jsc-lt-value-false">
 									false
 								</span>
-								<span class="jsc-live-test-value-true">
+								<span class="jsc-lt-value-true">
 									true
 								</span>
 							</div>
