Refactored addTest function.

--- a/webroot/test/uitest.html
+++ b/webroot/test/uitest.html
@@ -8,134 +8,99 @@
 </head>
 
 <body>
-	<div id="jsi-live-test">
+	<div id="jsi-live-test" style="">
 		<div id="jsi-lt-tab">
 			<table>
-				<tr id="jsi-lt-tab-inner">
-					<td><a class="jsc-current" href="javascript: void(0);">General</a></td>
-					<td><a href="javascript: void(0);">Sample</a></td>
-					<td><a href="javascript: void(0);">Sample</a></td>
-					<td><a href="javascript: void(0);">Sample</a></td>
-				</tr>
+				<tbody>
+					<tr id="jsi-lt-tab-list">
+						<td>
+							<a href="javascript: void(0);" class="jsc-current">
+								General
+							</a>
+						</td>
+					</tr>
+				</tbody>
 			</table>
 		</div>
-		<div id="jsi-lt-inner-general" class="jsc-lt-inner jsc-current">
-			<table class="jsc-lt-inner-table">
-<tr>
-					<th class="jsc-lt-true">●</th>
-					<td>
-						<div class="jsc-lt-section">
-							<div class="jsc-lt-title">
-								window: width
-							</div>
-							<div class="jsc-lt-value">
-								683 px
-							</div>
-						</div>
-					</td>
-				</tr>
-				<tr>
-					<th class="jsc-lt-true">●</th>
-					<td>
-						<div class="jsc-lt-section">
-							<div class="jsc-lt-title">
-								window: width
-							</div>
-							<div class="jsc-lt-value">
-								683 px
-							</div>
-						</div>
-					</td>
-				</tr>
-				<tr>
-					<th class="jsc-lt-false">●</th>
-					<td>
-						<div class="jsc-lt-section">
-							<div class="jsc-lt-title">
-								window: height
-							</div>
-							<div class="jsc-lt-value">
-								315 px
-							</div>
-						</div>
-					</td>
-				</tr>
-				<tr>
-					<th>●</th>
-					<td>
-						<div class="jsc-lt-section">
-							<div class="jsc-lt-title">
-								window: scrollTop
-							</div>
-							<div class="jsc-lt-value">
-								0 px
-							</div>
-						</div>
-					</td>
-				</tr>
-				<tr>
-					<th>●</th>
-					<td>
-						<div class="jsc-lt-section">
-							<div class="jsc-lt-title">
-								window: scrollLeft
-							</div>
-							<div class="jsc-lt-value">
-								0 px
-							</div>
-						</div>
-					</td>
-				</tr>
-				<tr>
-					<th>●</th>
-					<td>
-						<div class="jsc-lt-section">
-							<div class="jsc-lt-title">
-								user agent:
-							</div>
-							<div class="jsc-lt-value">
-								Mozilla/5.0 (Macintosh; Intel Mac OS X 10_8_2) AppleWebKit/537.31 (KHTML, like Gecko) Chrome/26.0.1410.65 Safari/537.31
-							</div>
-						</div>
-					</td>
-				</tr>
-				<tr>
-					<th>●</th>
-					<td>
-						<div class="jsc-lt-section">
-							<div class="jsc-lt-title">
-								hoge
-							</div>
-							<div class="jsc-lt-value">
-								hogehoge 
-								<span class="jsc-lt-value-true">
-									true
-								</span>
-								hoge 
-								<span class="jsc-lt-value-false">
-									false
-								</span>
-								<span class="jsc-lt-value-true">
-									true
-								</span>
-							</div>
-						</div>
-					</td>
-				</tr>
-			</table>
+		<div id="jsi-lt-output-wrapper">
+			<div class="jsc-lt-output jsc-current">
+				<table class="jsc-lt-output-table">
+					<tbody>
+						<tr>
+							<th>
+								●
+							</th>
+							<td>
+								<div class="jsc-lt-title">
+									window: width
+								</div>
+								<div class="jsc-lt-value">
+									537 px
+								</div>
+							</td>
+						</tr>
+						<tr>
+							<th>
+								●
+							</th>
+							<td>
+								<div class="jsc-lt-title">
+									window: height
+								</div>
+								<div class="jsc-lt-value">
+									696 px
+								</div>
+							</td>
+						</tr>
+						<tr>
+							<th>
+								●
+							</th>
+							<td>
+								<div class="jsc-lt-title">
+									window: scrollTop
+								</div>
+								<div class="jsc-lt-value">
+									0 px
+								</div>
+							</td>
+						</tr>
+						<tr>
+							<th>
+								●
+							</th>
+							<td>
+								<div class="jsc-lt-title">
+									window: scrollLeft
+								</div>
+								<div class="jsc-lt-value">
+									0 px
+								</div>
+							</td>
+						</tr>
+					</tbody>
+				</table>
+			</div>
 		</div>
 		<div id="jsi-lt-footer">
 			<table id="jsi-lt-status">
-				<tr>
-					<td id="jsi-lt-status-name">LIVETEST</td>
-					<td id="jsi-lt-status-passing">Pssing 2 specs</td>
-					<td id="jsi-lt-status-last"></td>
-				</tr>
+				<tbody>
+					<tr>
+						<td id="jsi-lt-status-name">
+							LIVETEST
+						</td>
+						<td id="jsi-lt-status-passing">
+							Pssing 0 specs
+						</td>
+						<td id="jsi-lt-status-last">
+						</td>
+					</tr>
+				</tbody>
 			</table>
 			<p id="jsi-lt-specs">
-			<a href="javascript: void(0);" class="jsc-lt-true">●</a><a href="javascript: void(0);" class="jsc-lt-true">●</a><a href="javascript: void(0);" class="jsc-lt-false">●</a>
 			</p>
 		</div>
 	</div>
+
 </body>
 </html>
