--- a/webroot/test/index.html
+++ b/webroot/test/index.html
@@ -4,6 +4,11 @@
 	<meta charset="utf-8">
 	<title>livetest test</title>
 	<meta name="viewport" content="width=device-width">
+	<style type="text/css">
+		body {
+			height: 5000px;
+		}
+	</style>
 </head>
 <body>
 	<script src="components/jquery/jquery.js"></script>
