--- a/webroot/test/index.html
+++ b/webroot/test/index.html
@@ -11,7 +11,7 @@
 	</style>
 </head>
 <body>
-	<!-- <script src="components/jquery/jquery.js"></script> -->
+	<script src="components/jquery/jquery.js"></script>
 	<script src="../livetest.js"></script>
 </body>
 </html>
